# lab_18

web-book-fastapi/: pyproject.toml
web-book-fastapi/book-catalog/: main.py  manage.bat  manage.py  stuff.py
web-book-fastapi/book-catalog/api/: __init__.py  main_views.py
web-book-fastapi/book-catalog/api/api_v1/: __init__.py
web-book-fastapi/book-catalog/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
web-book-fastapi/book-catalog/api/api_v1/books/: crud.py  dependencies.py
web-book-fastapi/book-catalog/api/api_v1/books/views/: __init__.py  details_views.py  list_views.py
web-book-fastapi/book-catalog/commands/: __init__.py  cli.py  hello.py  tokens.py
web-book-fastapi/book-catalog/core/: config.py
web-book-fastapi/book-catalog/schemas/: book.py
web-book-fastapi/book-catalog/testing/: conftest.py  test_main_views.py
web-book-fastapi/book-catalog/testing/test_api/test_books/: test_book.py  test_crud.py  test_validation.py
web-book-fastapi/book-catalog/testing/test_core/: test_dependencies.py  test_redis_tokens_helper.py
