[project]
name = "web-book-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "redis[hiredis]>=7.2.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]
